--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    namespace 'android.com.congviec'
+    namespace 'android.com.baithuchanh2'
     compileSdk 32
 
     defaultConfig {
-        applicationId "android.com.congviec"
-        minSdk 22
+        applicationId "android.com.baithuchanh2"
+        minSdk 23
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -30,7 +30,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
